--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body{
 
 .localFont2 p{
     font-family: 'Porter Sans Block';
-    font-size: 20px;
+    font-size: 48px;
     color:crimson;
     text-align: bottom;
 }
@@ -17,34 +17,37 @@ body{
 /*.flexContainer{
     display: flex;*/
 
-.flexContainer p{
-    display: flex;
-    font-size: 48px;
-}
 
 p{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
 }
 
+.subheading p{
+    font-family: 'Poppins', bold;
+    font-size: 30px;
+    text-align: bottom;
+}
+
 /*.topNav {
     overflow: hidden;
-    background-color: peru;
+    background-color: white;
+    padding-top: 15px;
 }
 
 .topNav a{
     float: left;
-    color: white;
+    color: black;
     text-align: center;
     padding: 10px 16px;
     text-decoration: none;
     font-size: 17px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 650;
 }
 
 .topNavRight {
-    float:inherit;
+    float: center;
 }
 
 .topNav a:hover {
@@ -55,26 +58,123 @@ p{
 
 .topNav a.active {
     background-color: lightgoldenrodyellow;
-    color: black;
+    color: red;
     border-radius: 5px;
 }*/
 
-.backgroundImage1{
+
+.backgroundImage{
+    background-color: rgb(95, 123, 105);
+    background-size: cover;
+    padding: 650px;
+}
+
+/*.backgroundImage1{
     background-image: url(../assets/Images/homePageHeader.png);
     background-size: cover;
-    height: 880px;
-}
+    padding: 50px;
+}*/
+
 
 .localFont2 p{
     text-align: bottom;
     text-align: left;
-    padding-left: 50px;
-    padding-top: 650px;
+    padding-left: 60px;
+    padding-top: 600px;
 }
 
 .subheading p{
     font-family: 'Poppins', bold;
     font-weight: 600;
-    padding-left: 50px;
+    padding-left: 10px;
     font-size: 30px;
+    padding-bottom: 10px;
 }
+
+.flexContainer{
+    display: flex;
+}
+
+.backgroundImage1 {
+    /* The image used */
+    background-image: url(../assets/Images/homePageHeader.png);
+  
+    /*min-height: 380px;*/
+
+    /* Center and scale the image nicely */
+    /*background-position: center;
+    background-repeat: no-repeat;*/
+    background-size: cover;
+
+    /* Needed to position the navbar */
+    /*position: relative;*/
+  }
+  
+  /* Position the navbar container inside the image */
+  .topNav {
+    position: absolute;
+    margin: 20px 100px;
+    width: 1000px;
+    align-items: center;
+    height: 65px;
+  }
+  
+  /* The navbar */
+  .topNav {
+    overflow: hidden;
+    background-color: #ffffff;
+    opacity: 0.75;
+    border-radius: 20px;
+  }
+  
+  /* Navbar links */
+  .topNavRight a {
+    float: center;
+    color: #333;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .topNav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topNavRight a.active{
+    color: crimson;
+    float: center;
+  }
+
+  .topNav img{
+    float: left;
+    width: 266px;
+    height: 48px;
+    align-content: center;
+  }
+
+  .topNav input[type=text] {
+    float: right;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
+    border: none;
+    font-size: 17px;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topNav a, .topNav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    
+    .topNav input[type=text] {
+      border: 1px solid #ccc;  
+    }
+  }
